# rust-nn

./: .gitignore  Cargo.toml  README.md
basic_nn/: Cargo.toml
basic_nn/src/: main.rs
compute/: Cargo.toml  build.rs  compute-kernel.air  compute-kernel.metal  compute-kernel.metallib
compute/src/: lib.rs  operations.rs  tests.rs
data/: expanded_and_normalized.df
dataframe/: Cargo.toml
dataframe/src/: lib.rs
model/: Cargo.toml
model/src/: layers.rs  lib.rs  loss_functions.rs
optimizer/: Cargo.toml
optimizer/src/: lib.rs
