[package]
name = "basic_nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
half = "2.4.1"
dataframe = { path = "../dataframe" }
model = { path = "../model" }
compute = { path = "../compute" }
optimizer = { path = "../optimizer" }
